<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    tools:context=".MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtKullaniciAdiBilgi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="T.C Kimlik Numarası"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtKullaniciAdi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="T.C Kimlik Numarası"
            android:inputType="textPersonName"
            android:textColor="@android:color/holo_orange_light"
            android:textColorHighlight="@android:color/holo_orange_light"
            android:textColorLink="@android:color/holo_orange_light" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sifre"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/sifre"
            android:inputType="textPassword"
            android:textColor="@android:color/holo_orange_dark"
            android:textColorHighlight="@android:color/holo_orange_dark"
            android:textColorLink="@android:color/holo_orange_dark" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/chbIsDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/doktor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/hesapOlustur"
            android:textColor="#000000"
            app:backgroundTint="@android:color/holo_orange_light"
            android:onClick="OnclickCreateAccount"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/giris"
            android:textColor="#000000"
            android:onClick="OnclickLogin"
            app:backgroundTint="@android:color/holo_orange_light" />
    </LinearLayout>


</LinearLayout>